--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -9,50 +9,54 @@
         <h3 class="panel-title">Slave Settings</h3>
     </div>
     <div class="panel-body">
-        <table width="100%">
-            <tr>
-                <th>Hostname</th>
-                <td colspan="2">
-                    <input ng-disabled="slave.state != 'disabled'" type="text" class="form-control" ng-model="slave.hostname"/>
-                </td>
-            </tr>
-            <tr>
-                <th>Slave port</th>
-                <td colspan="2">
-                    <input ng-disabled="slave.state != 'disabled'" type="number" class="form-control" ng-model="slave.slave_port"/>
-                </td>
-            </tr>
-            <tr>
-                <th>mongod port range</th>
-                <td>
-                    <input ng-disabled="slave.state != 'disabled'" type="number" class="form-control" ng-model="slave.mongod_port_range_begin"/>
-                </td>
-                <td>
-                    <input ng-disabled="slave.state != 'disabled'" type="number" class="form-control" ng-model="slave.mongod_port_range_end"/>
-                </td>
-            </tr>
-            <tr>
-                <th>Slave with persistent storage <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
-                </th>
-                <td colspan="2">
-                    <input ng-disabled="slave.state != 'disabled'" type="checkbox" class="form-control" ng-model="slave.persistant_storage"/>
-                </td>
-            </tr>
-            <tr>
-                <th>Root data directory</th>
-                <td colspan="2">
-                    <input ng-disabled="slave.state != 'disabled'" type="text" class="form-control" ng-model="slave.root_data_directory"/>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2"></td>
-                <td>
-                    <button ng-disabled="slave.state != 'disabled'" type="submit"
-                            class="btn btn-primary pull-right" ng-click="updateSlave()">
-                        Apply</button>
-                </td>
-            </tr>
-        </table>
+        <form ng-submit="updateSlave()">
+            <fieldset ng-disabled="slave.state != 'disabled'">
+                <table width="100%">
+                    <tr>
+                        <th>Hostname</th>
+                        <td colspan="2">
+                            <input type="text" class="form-control" ng-model="slave.hostname"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Slave port</th>
+                        <td colspan="2">
+                            <input type="number" class="form-control" ng-model="slave.slave_port"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>mongod port range</th>
+                        <td>
+                            <input type="number" class="form-control" ng-model="slave.mongod_port_range_begin"/>
+                        </td>
+                        <td>
+                            <input type="number" class="form-control" ng-model="slave.mongod_port_range_end"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Slave with persistent storage <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
+                        </th>
+                        <td colspan="2">
+                            <input type="checkbox" class="form-control" ng-model="slave.persistant_storage"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Root data directory</th>
+                        <td colspan="2">
+                            <input type="text" class="form-control" ng-model="slave.root_data_directory"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"></td>
+                        <td>
+                            <button type="submit"
+                                    class="btn btn-primary pull-right">
+                                Apply</button>
+                        </td>
+                    </tr>
+                </table>
+            </fieldset>
+        </form>
     </div>
 </div>
 <div class="panel panel-default" ng-if="!is_create_view">
