--- a/gui/pages/slaves.html
+++ b/gui/pages/slaves.html
@@ -1,7 +1,7 @@
 <h1 class="page-header">Slaves</h1>
 
 <h2 class="sub-header">Unknown</h2>
-<div class="bs-callout bs-callout-unknown" ng-repeat="slave in slaves" ng-if="slave.state == 'unknown'">
+<div class="bs-callout bs-callout-unknown" ng-repeat="slave in slaves" ng-if="slave.configured_state == 'unknown'">
     <h4>{{ slave.hostname }} - <b>Unknown</b>
                 <span class="pull-right">
                     <a href="#/slaves/{{slave.id}}" class="btn btn-default"><span class="glyphicon glyphicon-wrench"
@@ -11,7 +11,7 @@
 </div>
 
 <h2 class="sub-header">Maintenance</h2>
-<div class="bs-callout bs-callout-maintenance" ng-repeat="slave in slaves" ng-if="slave.state == 'maintenance'">
+<div class="bs-callout bs-callout-maintenance" ng-repeat="slave in slaves" ng-if="slave.configured_state == 'maintenance'">
     <h4>{{ slave.hostname }} - <b>Maintenance</b>
                 <span class="pull-right">
                     <a href="#/slaves/{{slave.id}}" class="btn btn-default"><span class="glyphicon glyphicon-wrench"
@@ -21,7 +21,7 @@
 </div>
 
 <h2 class="sub-header">Disabled</h2>
-<div class="bs-callout bs-callout-disabled" ng-repeat="slave in slaves" ng-if="slave.state == 'disabled'">
+<div class="bs-callout bs-callout-disabled" ng-repeat="slave in slaves" ng-if="slave.configured_state == 'disabled'">
     <h4>{{ slave.hostname }} - <b>Disabled</b>
                 <span class="pull-right">
                     <a href="#/slaves/{{slave.id}}" class="btn btn-default"><span class="glyphicon glyphicon-wrench"
@@ -31,7 +31,7 @@
 </div>
 
 <h2 class="sub-header">Active</h2>
-<div class="bs-callout bs-callout-active" ng-repeat="slave in slaves" ng-if="slave.state == 'active'">
+<div class="bs-callout bs-callout-active" ng-repeat="slave in slaves" ng-if="slave.configured_state == 'active'">
     <h4>{{ slave.hostname }} - <b>Active</b>
                 <span class="pull-right">
                     <a href="#/slaves/{{slave.id}}" class="btn btn-default"><span class="glyphicon glyphicon-wrench"
