--- a/gui/pages/riskgroups.html
+++ b/gui/pages/riskgroups.html
@@ -1,15 +1,45 @@
 <p>
-    <small>Group your slaves into groups which share an common (physical) fault source to reduce replica set
+    Group your slaves into groups which share an common (physical) fault source to reduce replica set
         downtimes in case of a fault.
-    </small>
 </p>
 <form ng-submit="createRiskGroup()">
     <table width="100%">
         <tr>
-            <td><input type="text" placeholder="New Risk Group Name" class="form-control" ng-model="new_riskgroup.name"/></td>
+            <td><input type="text" placeholder="New Risk Group Name" class="form-control"
+                       ng-model="new_riskgroup.name"/></td>
             <td>
                 <button class="btn btn-success">Create</button>
             </td>
         </tr>
     </table>
 </form>
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingOne">
+            <h4 class="panel-title">
+                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Collapsible Group Item #1
+                </a>
+            </h4>
+        </div>
+        <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+            <div class="panel-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            </div>
+        </div>
+    </div>
+    <div ng-repeat="riskgroup in riskgroups" class="panel panel-default">
+        <div class="panel-heading" data-toggle="collapse" role="tab" id="heading{{riskgroup.id}}">
+            <h4 class="panel-title">
+                <a class="collapsed" role="button" href="" data-toggle="collapse" data-target="#collapse{{riskgroup.id}}" data-parent="#accordion" aria-expanded="false" aria-controls="collapse{{riskgroup.id}}">
+                    {{riskgroup.name}}
+                </a>
+            </h4>
+        </div>
+        <div id="collapse{{riskgroup.id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{riskgroup.id}}">
+            <div class="panel-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            </div>
+        </div>
+    </div>
+</div>
