FIX: GUI: formatting and (now really) correct tooltip loading

--- a/gui/index.html
+++ b/gui/index.html
@@ -64,13 +64,18 @@
                 <li><a href="/#problems"><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>
                     Problems <span class="label label-danger">2</span></a>
                 </li>
-                <li><a href="/#slaves"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span> Slaves</a></li>
-                <li><a href="/#riskgroups"><span class="glyphicon glyphicon-flash" aria-hidden="true"></span> Risk Groups</a></li>
-                <li><a href="/#replicasets"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span> Replica Sets</a></li>
+                <li><a href="/#slaves"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span> Slaves</a>
+                </li>
+                <li><a href="/#riskgroups"><span class="glyphicon glyphicon-flash" aria-hidden="true"></span> Risk
+                    Groups</a></li>
+                <li><a href="/#replicasets"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span> Replica
+                    Sets</a></li>
             </ul>
             <ul class="nav nav-sidebar">
-                <li><a href="/#slaves/new"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> New Slave</a></li>
-                <li><a href="/#replicasets/new"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> New Replica Set</a></li>
+                <li><a href="/#slaves/new"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> New
+                    Slave</a></li>
+                <li><a href="/#replicasets/new"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+                    New Replica Set</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
@@ -83,11 +88,6 @@
         </div>
     </div>
 </div>
-</body>
 <script src="/static/js/bootstrap.min.js"></script>
-<script>
-    $(function () {
-        $('[data-toggle="tooltip"]').tooltip()
-    })
-</script>
+</body>
 </html>
