ADD: GUI: heading for risk groups

--- a/gui/pages/riskgroups.html
+++ b/gui/pages/riskgroups.html
@@ -1,3 +1,4 @@
+<h1>Risk Groups</h1>
 <p>
     Group your slaves into groups which share an common (physical) fault source to reduce replica set
     downtimes in case of a fault.
