FIX: GUI: unexpandable "unassigned slaves"-panel

--- a/gui/pages/riskgroups.html
+++ b/gui/pages/riskgroups.html
@@ -18,7 +18,7 @@
     <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingOne">
             <h4 class="panel-title">
-                <a role="button" data-toggle="collapse" data-parent="#accordion" href="" aria-expanded="true"
+                <a role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapseOne" href="" aria-expanded="true"
                    aria-controls="collapseOne">
                     Unassigned slaves
                 </a><span data-toggle="tooltip" data-placement="right"
