ADD: GUI: remove slaves from risk groups

--- a/gui/pages/riskgroups.html
+++ b/gui/pages/riskgroups.html
@@ -57,8 +57,9 @@
             <ul class="list-group">
                 <li ng-repeat="slave in riskgroup.slaves" class="list-group-item">{{slave.hostname}}
                     <span class="pull-right">Assign to
-                        <select ng-model="slave.riskgroup" ng-change="assignToRiskGroup(slave)">
+                        <select ng-model="slave.riskgroup" ng-change="assignToRiskGroup(slave, riskgroup)">
                             <option value="" selected>Select group..</option>
+                            <option value="0">Remove from risk group</option>
                             <option ng-repeat="riskgroup in riskgroups" value="{{riskgroup.id}}">{{riskgroup.name}}</option>
                             </select>
                         </span>
