--- a/gui/pages/riskgroups.html
+++ b/gui/pages/riskgroups.html
@@ -22,7 +22,7 @@
                    aria-expanded="true"
                    aria-controls="collapseOne">
                     Unassigned slaves
-                </a><span data-toggle="tooltip" data-placement="right"
+                </a> <span class="label label-primary">{{unassigned_slaves.length}}</span> <span data-toggle="tooltip" data-placement="right"
                           title="Slaves need to be in 'disabled' state to be assignable to a risk group."><span
                     class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></span>
             </h4>
@@ -49,7 +49,7 @@
                    data-target="#collapse{{riskgroup.id}}" data-parent="#accordion" aria-expanded="false"
                    aria-controls="collapse{{riskgroup.id}}" ng-click="getSlaves(riskgroup)">
                     {{riskgroup.name}}
-                </a>
+                </a> <span class="label label-primary">{{riskgroup.slaves.length}}</span>
             </h4>
         </div>
         <div id="collapse{{riskgroup.id}}" class="panel-collapse collapse" role="tabpanel"
