FIX: GUI: typo in model

--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -40,7 +40,7 @@
                         <th>Slave with persistent storage <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
                         </th>
                         <td colspan="2">
-                            <input type="checkbox" class="form-control" ng-model="edit_slave.persistant_storage"/>
+                            <input type="checkbox" class="form-control" ng-model="edit_slave.persistent_storage"/>
                         </td>
                     </tr>
                     <tr>
