--- a/gui/pages/riskgroups.html
+++ b/gui/pages/riskgroups.html
@@ -79,10 +79,10 @@
                 <h4 class="modal-title" id="myModalLabel{{riskgroup.id}}">Confirm Risk Group Removal</h4>
             </div>
             <div class="modal-body">
-                You are about to remove the risk group {{riskgroup.name}}.
+                You are about to remove the risk group '{{riskgroup.name}}'.
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="removeRiskGroup(riskgroup)" class="btn btn-danger">Remove Risk Group {{riskgroup.name}}</button>
+                <button type="button" ng-click="removeRiskGroup(riskgroup)" class="btn btn-danger">Remove Risk Group '{{riskgroup.name}}'</button>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
         </div>
