--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -106,10 +106,10 @@
                 <h4 class="modal-title" id="myModalLabel">Confirm Slave Removal</h4>
             </div>
             <div class="modal-body">
-                You are about to remove the slave {{ slave.hostname }}.
+                You are about to remove the slave '{{ slave.hostname }}'.
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" ng-click="deleteSlave()">Remove slave {{ slave.hostname }}</button>
+                <button type="button" class="btn btn-danger" ng-click="deleteSlave()">Remove slave '{{ slave.hostname }}'</button>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
         </div>
