--- a/gui/pages/problems.html
+++ b/gui/pages/problems.html
@@ -1,5 +1,5 @@
 <h1 class="page-header">Problems</h1>
 <div class="bs-callout bs-callout-unknown" ng-repeat="problem in problems">
-    <h4>{{problem.description}}</h4>
+    <h4>{{problem.description}} <small>Known since {{formatDate(problem.first_occurred)}}</small></h4>
     <p>{{problem.long_description}}</p>
 </div>
