--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -6,10 +6,8 @@
     <p>{{problem.long_description}}</p>
 </div>
 
-<div class="bs-callout bs-callout-{{ state }}" ng-if="!is_create_view">
-    <h4><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span> {{ replicaset.name }} is in
-        <b>$state</b>
-        state.</h4>
+<div class="bs-callout bs-callout-active" ng-if="!is_create_view && problems.length == 0">
+    <h4><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span> {{ replicaset.name }} is working.</h4>
 </div>
 <div class="panel panel-default" ng-if="!is_create_view">
     <div class="panel-heading">
