CLN: removed some sample output

--- a/gui/pages/home.html
+++ b/gui/pages/home.html
@@ -1,4 +1,4 @@
-<h1>Hello World</h1>
+<h1>Your MongoDB Cluster</h1>
 <h2 class="sub-header">Latest problems</h2>
 <div class="bs-callout bs-callout-unknown"
      ng-repeat="problem in problems | orderBy:problem.first_occurred:true | limitTo:3">
