FIX: only display the slaves' problems for each slave

--- a/gui/pages/slaves.html
+++ b/gui/pages/slaves.html
@@ -8,7 +8,7 @@
                                                                                   aria-hidden="true"></span></a>
                     </span>
     <ul>
-        <li ng-repeat="p in problems">{{p.description}}</li>
+        <li ng-repeat="p in slave.problems">{{p.description}}</li>
     </ul>
 
 
