--- a/gui/index.html
+++ b/gui/index.html
@@ -30,7 +30,6 @@
 </head>
 
 <body ng-controller="mainController">
-
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -41,7 +40,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">KIT-MAMID</a>
+            <a class="navbar-brand" href="/">KIT-MAMID- <b>PATH - {{$location.path()}}</b></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -59,22 +58,22 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li><a href="/#/"><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>
+                <li ng-class="{'active': $location.path()=='/'}"><a href="/#/"><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>
                     Overview</a></li>
-                <li><a href="/#problems"><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>
+                <li ng-class="{'active': $location.path()=='/problems'}"><a href="/#problems"><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>
                     Problems <span class="label label-danger" ng-if="problems.length > 0">{{problems.length}}</span></a>
                 </li>
-                <li><a href="/#slaves"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span> Slaves</a>
+                <li ng-class="{'active': $location.path().indexOf('/slaves') == 0}"><a href="/#slaves"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span> Slaves</a>
                 </li>
-                <li><a href="/#riskgroups"><span class="glyphicon glyphicon-flash" aria-hidden="true"></span> Risk
+                <li ng-class="{'active': $location.path()=='/riskgroups'}"><a href="/#riskgroups"><span class="glyphicon glyphicon-flash" aria-hidden="true"></span> Risk
                     Groups</a></li>
-                <li><a href="/#replicasets"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span> Replica
+                <li ng-class="{'active': $location.path().indexOf('/replicasets') == 0}"><a href="/#replicasets"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span> Replica
                     Sets</a></li>
             </ul>
             <ul class="nav nav-sidebar">
-                <li><a href="/#slaves/new"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> New
+                <li ng-class="{'active': $location.path()=='/slaves/new'}"><a href="/#slaves/new"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> New
                     Slave</a></li>
-                <li><a href="/#replicasets/new"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+                <li ng-class="{'active': $location.path()=='/replicasets/new}"><a href="/#replicasets/new"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
                     New Replica Set</a></li>
             </ul>
         </div>
