--- a/gui/index.html
+++ b/gui/index.html
@@ -40,7 +40,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">KIT-MAMID- <b>PATH - {{$location.path()}}</b></a>
+            <a class="navbar-brand" href="/">KIT-MAMID</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
