--- a/gui/index.html
+++ b/gui/index.html
@@ -58,22 +58,29 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li ng-class="{'active': $location.path()=='/'}"><a href="/#/"><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>
+                <li ng-class="{'active': $location.path()=='/'}"><a href="/#/"><span
+                        class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>
                     Overview</a></li>
-                <li ng-class="{'active': $location.path()=='/problems'}"><a href="/#problems"><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>
+                <li ng-class="{'active': $location.path()=='/problems'}"><a href="/#problems"><span
+                        class="glyphicon glyphicon-alert" aria-hidden="true"></span>
                     Problems <span class="label label-danger" ng-if="problems.length > 0">{{problems.length}}</span></a>
                 </li>
-                <li ng-class="{'active': $location.path().indexOf('/slaves') == 0 && $location.path().indexOf('/slaves/new') != 0}"><a href="/#slaves"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span> Slaves</a>
+                <li ng-class="{'active': $location.path().indexOf('/slaves') == 0 && $location.path().indexOf('/slaves/new') != 0}">
+                    <a href="/#slaves"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span> Slaves</a>
                 </li>
-                <li ng-class="{'active': $location.path()=='/riskgroups'}"><a href="/#riskgroups"><span class="glyphicon glyphicon-flash" aria-hidden="true"></span> Risk
+                <li ng-class="{'active': $location.path()=='/riskgroups'}"><a href="/#riskgroups"><span
+                        class="glyphicon glyphicon-flash" aria-hidden="true"></span> Risk
                     Groups</a></li>
-                <li ng-class="{'active': $location.path().indexOf('/replicasets') == 0 && $location.path().indexOf('/replicasets/new') != 0}"><a href="/#replicasets"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span> Replica
-                    Sets</a></li>
+                <li ng-class="{'active': $location.path().indexOf('/replicasets') == 0 && $location.path().indexOf('/replicasets/new') != 0}">
+                    <a href="/#replicasets"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span> Replica
+                        Sets</a></li>
             </ul>
             <ul class="nav nav-sidebar">
-                <li ng-class="{'active': $location.path()=='/slaves/new'}"><a href="/#slaves/new"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> New
+                <li ng-class="{'active': $location.path()=='/slaves/new'}"><a href="/#slaves/new"><span
+                        class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> New
                     Slave</a></li>
-                <li ng-class="{'active': $location.path()=='/replicasets/new'}"><a href="/#replicasets/new"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+                <li ng-class="{'active': $location.path()=='/replicasets/new'}"><a href="/#replicasets/new"><span
+                        class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
                     New Replica Set</a></li>
             </ul>
         </div>
