FIX: UI representatoin of api change in problems

--- a/gui/pages/home.html
+++ b/gui/pages/home.html
@@ -7,8 +7,8 @@
     </h4>
     <p>{{problem.long_description}}</p>
     <ul>
-        <li ng-if="problem.slave_id!=0"><a href="#/slaves/{{problem.slave_id}}">Inspect affected Slave</a></li>
-        <li ng-if="problem.replica_set_id!=0"><a href="#/replicasets/{{problem.replica_set_id}}">Inspect affected
+        <li ng-if="problem.slave_id!=null"><a href="#/slaves/{{problem.slave_id}}">Inspect affected Slave</a></li>
+        <li ng-if="problem.replica_set_id!=null"><a href="#/replicasets/{{problem.replica_set_id}}">Inspect affected
             Replica Set</a></li>
     </ul>
 </div>
