--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -2,7 +2,9 @@
 <h1 class="page-header" ng-if="!is_create_view">Edit Replica Set '{{replicaset.name}}'</h1>
 
 <div class="bs-callout bs-callout-unknown" ng-repeat="problem in problems" ng-if="!is_create_view">
-    <h4>{{problem.description}} <small>Known since {{formatDate(problem.first_occurred)}}</small></h4>
+    <h4>{{problem.description}}
+        <small>Known since {{formatDate(problem.first_occurred)}}</small>
+    </h4>
     <p>{{problem.long_description}}</p>
 </div>
 
@@ -19,7 +21,8 @@
             <tr ng-repeat="slave in replicaset_slaves">
                 <td>
                     <div class="bs-callout bs-callout-{{ slave.state }}">
-                        <h4><span class="glyphicon glyphicon-hdd" aria-hidden="true"></span> {{ slave.hostname }} - <b>
+                        <h4><span class="glyphicon glyphicon-hdd" aria-hidden="true"
+                                  ng-if="slave.persistent_storage"></span> {{ slave.hostname }} - <b>
                             {{ slave.state }}</b>
                         </h4>
                     </div>
@@ -39,7 +42,8 @@
                 <tr>
                     <th>Replica Set name</th>
                     <td colspan="2">
-                        <input ng-disabled="!is_create_view" type="text" class="form-control" ng-model="edit_replicaset.name"/>
+                        <input ng-disabled="!is_create_view" type="text" class="form-control"
+                               ng-model="edit_replicaset.name"/>
                     </td>
                 </tr>
                 <tr>
@@ -58,7 +62,8 @@
                     <th>Sharding configuration server
                     </th>
                     <td colspan="2">
-                        <input ng-disabled="!is_create_view" type="checkbox" class="form-control" ng-model="edit_replicaset.configure_as_sharding_config_server"/>
+                        <input ng-disabled="!is_create_view" type="checkbox" class="form-control"
+                               ng-model="edit_replicaset.configure_as_sharding_config_server"/>
                     </td>
                 </tr>
                 <tr>
@@ -79,10 +84,12 @@
     </div>
     <div class="panel-body">
         <button type="button" role="button" class="btn btn-danger"
-                data-toggle="modal" data-target="#confirm_remove">Remove Replica Set '{{ replicaset.name }}' from system</button>
+                data-toggle="modal" data-target="#confirm_remove">Remove Replica Set '{{ replicaset.name }}' from system
+        </button>
     </div>
 </div>
-<div class="modal fade" id="confirm_remove" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" ng-if="!is_create_view">
+<div class="modal fade" id="confirm_remove" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     ng-if="!is_create_view">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -95,7 +102,9 @@
                 replica set will be unrecoverably removed.
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" ng-click="deleteReplicaSet()">Remove Replica Set '{{ replicaset.name }}'</button>
+                <button type="button" class="btn btn-danger" ng-click="deleteReplicaSet()">Remove Replica Set '{{
+                    replicaset.name }}'
+                </button>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
         </div>
