FIX: gui: display replica set problems in the replicasets overview

--- a/gui/pages/replicasets.html
+++ b/gui/pages/replicasets.html
@@ -11,7 +11,7 @@
             </a>
         </span>
     <ul>
-        <li ng-repeat="p in replicaset.problmes">{{problem.description}}</li>
+        <li ng-repeat="p in replicaset.problems">{{p.description}}</li>
     </ul>
 </div>
 <h2 class="sub-header">Working Replica Sets</h2>
