UPD: host d3.hs localy

--- a/gui/index.html
+++ b/gui/index.html
@@ -24,7 +24,7 @@
     <script src="/static/js/angular-route.min.js"></script>
     <script src="/static/js/angular-resource.min.js"></script>
     <script src="/static/js/jquery.min.js"></script>
-    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="/static/js/d3.v3.min.js" charset="utf-8"></script>
     <script src="/static/js/c3/c3.min.js"></script>
     <script src="/static/js/mamid.js"></script>
 </head>
